fix(proposal card): fix test overlaps (#1317)

--- a/astro_2.0/components/ProposalCardRenderer/components/ProposalCard/ProposalCard.module.scss
+++ b/astro_2.0/components/ProposalCardRenderer/components/ProposalCard/ProposalCard.module.scss
@@ -156,8 +156,6 @@
 
 .contentCell {
   grid-area: content;
-  overflow-x: hidden;
-  text-overflow: ellipsis;
 }
 
 .proposalGroupCell {
